# cligame-cli

./: Cargo.toml
src/: main.rs
src/api/: client.rs  login.rs  mod.rs  tavern.rs  types.rs
src/commands/: login.rs  mod.rs  tavern.rs
