[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["cargo"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

